# resonance-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_api.py  debug_db.py  debug_http_connections.py  debug_radio_simulation.py  environment.yml  pyproject.toml  pyrightconfig.json  test_discovery_live.py
.zed/: settings.json  tasks.json
assets/logos/: PROMPTS.md  font-mockups.html
docs/: AI_BOOTSTRAP.md  ARCHITECTURE.md  ARCHITECTURE_WEB.md  CHANGELOG.md  COLDSTART.md  COMPARISON_LMS.md  DEEP_RESEARCH_QUESTIONS.md  E2E_TEST_GUIDE.md  ECOSYSTEM.md  LYRION_PROTOCOL_DOCS.md  PLAN_UUID_RESET.md  Research_gold.md  Research_goldII.md  SEEK_ELAPSED_FINDINGS.md  SHIPMENT_THOUGHTS.md  SILENT_UI_DURCHBRUCH.md  SILENT_UI_FIXES.md  SLIMPROTO.md  SQUEEZEBOX_RADIO_PROTOCOL.md  check_dump.py  findings.md  resonance_squeezebox_cometd_report_stub.md  the_silent_ui.md  ws10.pcapng  ws11.pcapng  ws12.pcapng  ws14.pcapng  ws15.pcapng  ws16.pcapng  ws17.pcapng  ws18.pcapng  ws19.pcapng  ws20.pcapng  ws21.pcapng  ws23.pcapng  ws24.pcapng  ws29.pcapng  ws30.pcapng  ws32.pcapng  ws32_server.txt  (+5 more)
docs/research/: UI_Research_I.md  UI_Research_II.md
resonance/: __init__.py  __main__.py  server.py
resonance/config/: __init__.py  devices.toml  legacy.conf
resonance/core/: __init__.py  artwork.py  events.py  library.py  library_db.py  playlist.py  scanner.py
resonance/core/db/: __init__.py  models.py  ordering.py  queries_albums.py  queries_artists.py  queries_meta.py  queries_tracks.py  schema.py
resonance/player/: __init__.py  client.py  registry.py
resonance/protocol/: __init__.py  commands.py  discovery.py  slimproto.py
resonance/streaming/: __init__.py  policy.py  seek_coordinator.py  server.py  transcoder.py
resonance/web/: __init__.py  cometd.py  jsonrpc.py  jsonrpc_helpers.py  server.py
resonance/web/handlers/: __init__.py  library.py  menu.py  playback.py  playlist.py  seeking.py  status.py
resonance/web/routes/: __init__.py  api.py  artwork.py  cometd.py  streaming.py
scripts/: dev.ps1
tests/: __init__.py  test_cometd.py  test_commands.py  test_core_library.py  test_discovery.py  test_playlist.py  test_role_filters.py  test_seek_coordinator.py  test_slimproto.py  test_streaming.py  test_transcoder.py  test_web_api.py  ws.pcapng  ws2.pcapng  ws3.pcapng  ws4pcapng.pcapng
web-ui/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web-ui/src/: app.css  app.html
web-ui/src/lib/: api.ts
web-ui/src/lib/components/: AddFolderModal.svelte  BlurHashPlaceholder.svelte  CoverArt.svelte  NowPlaying.svelte  PlayerSelector.svelte  QualityBadge.svelte  Queue.svelte  ResizeHandle.svelte  SearchBar.svelte  Sidebar.svelte  TrackList.svelte
web-ui/src/lib/stores/: color.svelte.ts  player.svelte.ts  ui.svelte.ts
web-ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web-ui/static/fonts/: orbitron.css
